--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,14 @@
         <version>5.6.5.Final</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.telegram/telegrambots -->
+    <dependency>
+        <groupId>org.telegram</groupId>
+        <artifactId>telegrambots</artifactId>
+        <version>5.7.1</version>
+    </dependency>
+
+
 </dependencies>
 
 </project>
