--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@
     <dependency>
         <groupId>com.google.code.gson</groupId>
         <artifactId>gson</artifactId>
-        <version>2.8.9</version>
+        <version>2.9.0</version>
     </dependency>
     <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
     <!--<dependency>
@@ -89,14 +89,36 @@
     <dependency>
         <groupId>org.hibernate</groupId>
         <artifactId>hibernate-core</artifactId>
-        <version>5.6.5.Final</version>
+        <version>5.6.7.Final</version>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-ehcache -->
+
     <dependency>
         <groupId>org.hibernate</groupId>
-        <artifactId>hibernate-ehcache</artifactId>
-        <version>5.6.5.Final</version>
+        <artifactId>hibernate-jcache</artifactId>
+        <version>5.6.7.Final</version>
     </dependency>
+
+    <dependency>
+        <groupId>org.ehcache</groupId>
+        <artifactId>ehcache</artifactId>
+        <version>3.9.9</version>
+        <scope>runtime</scope>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/com.mchange/c3p0 -->
+    <dependency>
+        <groupId>com.mchange</groupId>
+        <artifactId>c3p0</artifactId>
+        <version>0.9.5.5</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-c3p0 -->
+    <dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-c3p0</artifactId>
+        <version>5.6.7.Final</version>
+    </dependency>
+
 
     <!-- https://mvnrepository.com/artifact/org.telegram/telegrambots -->
     <dependency>
