--- a/pom.xml
+++ b/pom.xml
@@ -178,6 +178,11 @@
             <version>${javafx.version}</version>
             <classifier>linux</classifier>
         </dependency>
+        <dependency>
+            <groupId>org.java-websocket</groupId>
+            <artifactId>Java-WebSocket</artifactId>
+            <version>1.5.3</version>
+        </dependency>
 
     </dependencies>
 
