--- a/src/main/resources/settings/settings.json
+++ b/src/main/resources/settings/settings.json
@@ -1,5 +1,6 @@
 {
   "circles_database": "Local",
   "bot_database": "Local",
-  "admin_database": "Local"
+  "admin_database": "Local",
+  "donations_database": "Local"
 }
